fixed profile photo link, updated folder

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="https://github.com/vpickard707">Github</a></li>
-                    <li><a href="https://www.linkedin.com/in/violetpickard/">LinkedIn</a></li>
+                    <li><a target = "_blank" href="https://github.com/vpickard707">Github</a></li>
+                    <li><a target = "_blank" href="https://www.linkedin.com/in/violetpickard/">LinkedIn</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,7 +40,7 @@
         <div id="main-container" class="container">
             <section class="main-section">
                 <h1>About Me</h1>
-                <img src="assets/images/portfolio.jpg" style="width: 200px; height: 225px;" class="auth-image" alt="Violet">
+                <img src="assets/images/portfolio.jpg" style="width: 200px; height: auto;" class="auth-image" alt="Violet">
                 <p> I was born and raised in California.
                     I earned my B.A. in Liberal Studies at California State University, Monterey Bay, with an emphasis in Visual and Performing Arts.
                     </p>
@@ -54,9 +54,9 @@
         <div class="container">
             <div class="row">
                 <div class="col l3 s12">
-                    <div class="container">
+                    <!-- <div class="container"> -->
                         © 2020 Violet Pickard
-                    </div>
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
