--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="index.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="https://github.com/vpickard707">Github</a></li>
-                    <li><a href="https://www.linkedin.com/in/violetpickard ">LinkedIn</a></li>
+                    <li><a target = "_blank" href="https://github.com/vpickard707">Github</a></li>
+                    <li><a target = "_blank" href="https://www.linkedin.com/in/violetpickard ">LinkedIn</a></li>
                 </ul>
             </div>
         </nav>
