updated image links

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
                     <div class="row">
                             <div class="col-md-6">
                                 <div class="card bg-dark border-dark" style="width: 32rem;">
-                                    <img src="./assets/images/Eat-Da-Burger.png" style= "max-height: 315px" class="card-img-top" alt="note-taker-app">
+                                    <img src="./assets/images/weather.jpg" style= "max-height: 315px" class="card-img-top" alt="weather">
                                     <div class="card-body text-white bg-dark border-dark">
                                         <h5 class="card-title border-dark">Weather Dashboard</h5>
                                         <p class="card-text">This application uses an api to generate current weather and forecast information for a given area.</p>
@@ -117,7 +117,7 @@
                         <div></div>
                         <div class="col-md-6">
                             <div class="card bg-dark border-dark" style="width: 32rem;">
-                                <img src="./assets/images/fitness.jpg" class="card-img-top" alt="workday-scheduler">
+                                <img src="./assets/images/fitness.jpg" class="card-img-top" alt="fitness">
                                 <div class="card-body text-white bg-dark">
                                     <h5 class="card-title">Fitness Tracker</h5>
                                     <p class="card-text">This application allows users to input and save their workout information including type of workout, duration, etc.</p>
@@ -135,7 +135,7 @@
                     <div class="row">
                             <div class="col-md-6">
                                 <div class="card bg-dark border-dark" style="width: 32rem;">
-                                    <img src="./assets/images/cookbook.jpg" style= "max-height: 315px" class="card-img-top" alt="note-taker-app">
+                                    <img src="./assets/images/cookbook.jpg" style= "max-height: 315px" class="card-img-top" alt="cookbook">
                                     <div class="card-body text-white bg-dark border-dark">
                                     <h5 class="card-title border-dark">Cookbook</h5>
                                     <p class="card-text">This group project allows users to search for recipes based on given ingredients.</p>
@@ -148,7 +148,7 @@
                         <div></div>
                         <div class="col-md-6">
                             <div class="card bg-dark border-dark" style="width: 32rem;">
-                                <img src="./assets/images/Weather-Dashboard.jpg" class="card-img-top" alt="weather-dashboard">
+                                <img src="./assets/images/Weather-Dashboard.jpg" class="card-img-top" alt="budget">
                                 <div class="card-body text-white bg-dark">
                                     <h5 class="card-title">Progressive Budget App</h5>
                                     <p class="card-text">An app that allows users to log and chart their income/deductions over time and to work both online and offline.</p>
