--- a/resume.html
+++ b/resume.html
@@ -9,12 +9,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <!-- FontAwesome Link -->
         <script src="https://kit.fontawesome.com/761c550c42.js" crossorigin="anonymous"></script>
-        <!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
+        
         <!-- Google Fonts Link-->
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -60,12 +55,13 @@
                         </ul>
                     </div>
             </nav>
+            <br>
                 <!-- Resume Contact Info -->
                 <section class="container resume text-light">
                         <div class="row" id="resume">
                             <div class="col-sm-3" id="logo">
                                 <h1 class="resume-name text-center">Violet</h1>
-                                <div><img id="profile-pic" src="./assets/images/portfolio.jpg" alt="Violet profile pic"></div>
+                                <div><img id="profile-pic" src="./assets/images/profile.jpg" alt="Violet profile pic"></div>
                                 <br>
                                 <h5 class="text-center">Front End Developer</h5>
                                 <br>
