fixed image link

--- a/portfolio.html
+++ b/portfolio.html
@@ -143,7 +143,7 @@
                         <div></div>
                         <div class="col-md-6">
                             <div class="card bg-dark border-dark" style="width: 32rem;">
-                                <img src="./assets/images/Weather-Dashboard.jpg" class="card-img-top" alt="budget">
+                                <img src="./assets/images/budget.jpg" class="card-img-top" alt="budget">
                                 <div class="card-body text-white bg-dark">
                                     <h5 class="card-title">Progressive Budget App</h5>
                                     <p class="card-text">An app that allows users to log and chart their income/deductions over time and to work both online and offline.</p>
