added to summary

--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
                 <section class="container resume text-light">
                         <div class="row" id="resume">
                             <div class="col-sm-3" id="logo">
-                                <h1 class="resume-name text-center">Violet</h1>
+                                <h1 class="resume-name text-center">Violet Pickard</h1>
                                 <div><img id="profile-pic" src="./assets/images/profile.jpg" alt="Violet profile pic"></div>
                                 <br>
                                 <h5 class="text-center">Front End Developer</h5>
@@ -104,8 +104,8 @@
                                 <!-- SUMMARY -->
                                 <h3>Summary</h3>
                                 <ol class="list-unstyled">
-                                    <li> I was born and     raised in California.
-                                    I earned my B.A. in Liberal Studies at California State University, Monterey Bay, with an emphasis in Visual and Performing Arts.</li><br>
+                                    <li> I was born and raised in California.
+                                    I studied full stack web development through UC Davis Coding Bootcamp. I earned my B.A. in Liberal Studies at California State University, Monterey Bay, with an emphasis in Visual and Performing Arts.</li><br>
                                 </ol>
                             </div>
                             <br>
