added resume thumbnail

--- a/resume.html
+++ b/resume.html
@@ -94,6 +94,11 @@
                                     <div><img src="./assets/images/mongodb-logo.png" style="max-width: 20px"> mongoDB</div>
                                     <div><i class="fab react-logo resume-icon fa-react"></i> React</div>
                                     <br><br><br>
+                                    <!-- resume png preview -->
+                                    <a href="./assets/resume.png" download>
+                                        <img src="./assets/resume.png" alt="resume png">
+                                      </a>
+                                      <br><br><br>
                                     <!-- PDF Button -->
                                     <div><a href="./assets/resume.pdf" target="_blank" type="button" class="btn btn-primary"><i class="fas fa-file-pdf"></i> Download PDF Version</a></div>
                                 </div>
